cleanup/cleanup-empty-replicasets/.chainsaw-test/chainsaw-assert-1.yaml
apiVersion: apps/v1
kind: ReplicaSet
metadata:
  name: example-797bfc7b6f
  namespace: default
